--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -6,7 +6,8 @@ name: Step 0, Welcome
 # This will run every time we create push a commit to `main`.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
-  fork
+  watch:
+    types: [started]
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
