--- a/.github/workflows/1-chapter1.yml
+++ b/.github/workflows/1-chapter1.yml
@@ -66,15 +66,19 @@ jobs:
           branch_name: my-first-branch
 
       # Add three commits to the my-first-branch branch.
-      - name: Add three commits
+      - name: Add chapter2
         run: |
-          echo "First commit" > file1.txt
-          git add file1.txt
-          git commit -m "First commit"
-          echo "Second commit" > file2.txt
-          git add file2.txt
-          git commit -m "Second commit"
-          echo "Third commit" > file3.txt
-          git add file3.txt
-          git commit -m "Third commit"
+          echo "Chatper 2" > chapter2
+          git add chapter2
+          git commit -m "Added chapter2"
+
+          echo "Chapter 2" > chapter2
+          git commit -m "Fixed typo"
+
+          echo "Section 2" >> chapter2
+          git commit -m "Added 'Section 1' to chapter2"
+
+          echo "Section 2" >> chapter2
+          git commit -m "Fixed typo"
+
           git push origin my-first-branch
