--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -1,14 +1,13 @@
-name: Step 0, Welcome
+name: Step 1
 
-# This step triggers after the learner creates a new repository from the template.
-# This workflow updates from step 0 to step 1.
+# This step listens for the learner to create branch `my-first-branch`.
+# This workflow updates from step 1 to step 2.
 
-# This will run every time we create push a commit to `main`.
+# This will run every time we create a branch or tag.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  watch:
-    types: [started]
+  create:
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -17,6 +16,7 @@ permissions:
   contents: write
 
 jobs:
+  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
     name: Get current step number
     runs-on: ubuntu-latest
@@ -26,7 +26,7 @@ jobs:
 
       - id: get_step
         run: |
-          current_step=0
+          current_step=1
 
           if [[ "${{ github.event_name }}" == "watch" ]]; then 
             echo "The workflow was triggered by the repo getting 'starred'"
@@ -41,34 +41,56 @@ jobs:
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_welcome:
-    name: On welcome
+  on_create_a_branch:
+    name: On create a branch
     needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 0.
+    # 2. The step is currently 1.
+    # 3. The event is a branch.
+    # 4. The branch name is `my-first-branch`.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 0 }}
+          && needs.get_current_step.outputs.current_step == 1
+          && github.ref_type == 'branch'
+          && github.ref_name == 'my-first-branch' }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit README.md.
+      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Let's get all the branches.
 
-      # In README.md, switch step 0 for step 1.
-      - name: Update to step 1
+      # In README.md, switch step 1 for step 2.
+      - name: Update to step 2
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 0
-          to_step: 1
+          from_step: 1
+          to_step: 2
           branch_name: my-first-branch
+
+      # Add three commits to the my-first-branch branch.
+      - name: Add chapter2 commits
+        run: |
+          echo "Chatper 2" > chapter2
+          git add chapter2
+          git commit -m "Added chaptor2"
+
+          echo "Chapter 2" > chapter2
+          git commit -am "FIxed tyypo"
+
+          echo "Section 2" >> chapter2
+          git commit -am "Added 'Section 1' to chapter2"
+
+          echo "Section 2" >> chapter2
+          git commit -am "fix"
+
+          git push origin my-first-branch
