--- a/.github/workflows/2-step.yml
+++ b/.github/workflows/2-step.yml
@@ -1,13 +1,13 @@
-name: Step 1, Create a branch
+name: Step 2
 
-# This step listens for the learner to create branch `my-first-branch`.
-# This workflow updates from step 1 to step 2.
+# This step listens for the learner to delete the branch `my-first-branch`.
+# This workflow updates from step 2 to step 3.
 
-# This will run every time we create a branch or tag.
+# This action will run every time `my-first-branch` is deleted.
 # Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  create:
+  delete:
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -21,30 +21,33 @@ jobs:
     name: Check current step number
     runs-on: ubuntu-latest
     steps:
+      # Print out github context
+      - name: Debug
+        run: |
+          echo "github context: ${{ toJson(github) }}"
       - name: Checkout
         uses: actions/checkout@v4
       - id: get_step
         run: |
           echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
+
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  on_create_a_branch:
-    name: On create a branch
+  on_delete_branch:
+    name: On delete branch
     needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 1.
-    # 3. The event is a branch.
-    # 4. The branch name is `my-first-branch`.
+    # 2. The step is currently 2.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 1
-          && github.ref_type == 'branch'
-          && github.ref_name == 'my-first-branch' }}
+          && needs.get_current_step.outputs.current_step == 2
+          && github.event.ref_type == 'branch'
+          && github.event.ref == 'my-first-branch' }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
@@ -56,29 +59,11 @@ jobs:
         with:
           fetch-depth: 0 # Let's get all the branches.
 
-      # In README.md, switch step 1 for step 2.
-      - name: Update to step 2
+      # In README.md, switch step 2 for step 3.
+      - name: Update to step 3
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 1
-          to_step: 2
+          from_step: 2
+          to_step: 3
           branch_name: my-first-branch
-
-      # Add three commits to the my-first-branch branch.
-      - name: Add chapter2
-        run: |
-          echo "Chatper 2" > chapter2
-          git add chapter2
-          git commit -m "Added chaptor2"
-
-          echo "Chapter 2" > chapter2
-          git commit -am "FIxed tyypo"
-
-          echo "Section 2" >> chapter2
-          git commit -am "Added 'Section 1' to chapter2"
-
-          echo "Section 2" >> chapter2
-          git commit -am "fix"
-
-          git push origin my-first-branch
