--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -26,6 +26,7 @@ jobs:
 
       - if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
+            echo "::notice file=app.js,line=1,col=5,endColumn=7::Missing semicolon"
             echo "The workflow was triggered manually"
             echo "CURRENT_STEP=1" >> $GITHUB_ENV
 
@@ -33,12 +34,9 @@ jobs:
         run: |
             echo "CURRENT_STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_ENV
 
-      - id: get_step
-        run: |
-          echo "STEP=$CURRENT_STEP" >> $GITHUB_OUTPUT
     outputs:
       # Output the CURRENT_STEP environment variable.
-      current_step: ${{ steps.get_step.outputs.step }}
+      current_step: ${{ env.STEP }}
 
   main:
     # Check if workflow_dispatch or create event was triggered.
@@ -49,3 +47,55 @@ jobs:
       - run: |
           echo "The current step is ${{ needs.get_current_step.outputs.current_step }}"
           exit 1
+
+
+    # # We will only run this action when:
+    # # 1. This repository isn't the template repository.
+    # # 2. The step is currently 1.
+    # # 3. The event is a branch.
+    # # 4. The branch name is `my-first-branch`.
+    # # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
+    # # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
+    # if: >-
+    #   ${{ github.event_name == 'watch' 
+    #       && !github.event.repository.is_template
+    #       && needs.get_current_step.outputs.current_step == 1
+    #       && github.ref_type == 'branch'
+    #       && github.ref_name == 'my-first-branch' }}
+
+    # # We'll run Ubuntu for performance instead of Mac or Windows.
+    # runs-on: ubuntu-latest
+
+    # steps:
+    #   # We'll need to check out the repository so that we can edit the README.
+    #   - name: Checkout
+    #     uses: actions/checkout@v4
+    #     with:
+    #       fetch-depth: 0 # Let's get all the branches.
+
+    #   # In README.md, switch step 1 for step 2.
+    #   - name: Update to step 2
+    #     uses: skills/action-update-step@v2
+    #     with:
+    #       token: ${{ secrets.GITHUB_TOKEN }}
+    #       from_step: 1
+    #       to_step: 2
+    #       branch_name: my-first-branch
+
+    #   # Add three commits to the my-first-branch branch.
+    #   - name: Add chapter2 commits
+    #     run: |
+    #       echo "Chatper 2" > chapter2
+    #       git add chapter2
+    #       git commit -m "Added chaptor2"
+
+    #       echo "Chapter 2" > chapter2
+    #       git commit -am "FIxed tyypo"
+
+    #       echo "Section 2" >> chapter2
+    #       git commit -am "Added 'Section 1' to chapter2"
+
+    #       echo "Section 2" >> chapter2
+    #       git commit -am "fix"
+
+    #       git push origin my-first-branch
