--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -24,12 +24,12 @@ jobs:
       STEP: 9
     steps:
       - name: If triggered by event
-        if: ${{ github.event_name != 'workflow_dispatch' }}
+        if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
             echo "STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_ENV
 
       - name: Check step
-        if: ${{ env.STEP != 1 }}
+        if: ${{ env.STEP != 10 }}
         run: |
             echo "The current step is ${{ env.STEP }}"
             exit 1
