--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -23,6 +23,9 @@ jobs:
     env:
       STEP: 9
     steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: If triggered by event
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
