--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -25,8 +25,9 @@ jobs:
     steps:
       - name: Set step
         if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: |
-            echo "STEP=$DEFAULT_STEP" >> $GITHUB_ENV
+        run: core.error('This is an error message')
+        # run: |
+            # echo "STEP=$DEFAULT_STEP" >> $GITHUB_ENV
 
       # Needed so we can read the step number from -step.txt
       - name: Checkout
@@ -34,6 +35,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Set step (from file)
+        if: ${{ github.event_name != 'workflow_dispatch' }}
         run: |
             echo "STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_ENV
 
