--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -25,29 +25,27 @@ jobs:
     steps:
       - name: Set step
         if: ${{ github.event_name == 'workflow_dispatch' }}
-        run: core.error('This is an error message')
-        # run: |
-            # echo "STEP=$DEFAULT_STEP" >> $GITHUB_ENV
+        run: echo "STEP=$DEFAULT_STEP" >> $GITHUB_ENV; exit 1
 
       # Needed so we can read the step number from -step.txt
       - name: Checkout
-        if: ${{ github.event_name != 'workflow_dispatch' }}
         uses: actions/checkout@v4
 
       - name: Set step (from file)
         if: ${{ github.event_name != 'workflow_dispatch' }}
-        run: |
-            echo "STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_ENV
+        run: echo "STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_ENV
 
       - name: Check step
         if: ${{ env.STEP != env.DEFAULT_STEP }}
-        run: core.error('This is an error message')
+        run: |
+            echo "Not our step. Exiting."
+            exit 1
     outputs:
       current_step: ${{ env.STEP }}
 
   test:
     # Check if workflow_dispatch or create event was triggered.
-    name: On create a branch
+    name: Check step condition
     needs: get_step
     runs-on: ubuntu-latest
     # We will only run this action when:
@@ -57,77 +55,44 @@ jobs:
     # 4. The branch name is `my-first-branch`.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    # if: >-
-    #   ${{ !github.event.repository.is_template
-    #       && needs.get_step.outputs.current_step == 1
-    #       && github.ref_type == 'branch'
-    #       && github.ref_name == 'my-first-branch' }}
-
+    if: >-
+      ${{ success()
+          && !github.event.repository.is_template
+          && github.ref_type == 'branch'
+          && github.ref_name == 'my-first-branch' }}
     steps:
       - run: |
           echo "The current step is ${{ needs.get_step.outputs.current_step }}"
-          exit 1
 
+      # We'll need to check out the repository so that we can edit the README.
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Let's get all the branches.
 
+      # In README.md, switch step 1 for step 2.
+      - name: Update to step 2
+        uses: skills/action-update-step@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          from_step: 1
+          to_step: 2
+          branch_name: my-first-branch
 
-  main:
-    # Check if workflow_dispatch or create event was triggered.
-    name: On create a branch
-    needs: get_step
-    runs-on: ubuntu-latest
-    steps:
-      - run: |
-          echo "The current step is ${{ needs.get_step.outputs.current_step }}"
-          exit 1
+      # Add three commits to the my-first-branch branch.
+      - name: Add chapter2 commits
+        run: |
+          echo "Chatper 2" > chapter2
+          git add chapter2
+          git commit -m "Added chaptor2"
 
+          echo "Chapter 2" > chapter2
+          git commit -am "FIxed tyypo"
 
-    # # We will only run this action when:
-    # # 1. This repository isn't the template repository.
-    # # 2. The step is currently 1.
-    # # 3. The event is a branch.
-    # # 4. The branch name is `my-first-branch`.
-    # # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    # if: >-
-    #   ${{ github.event_name == 'watch' 
-    #       && !github.event.repository.is_template
-    #       && needs.get_current_step.outputs.current_step == 1
-    #       && github.ref_type == 'branch'
-    #       && github.ref_name == 'my-first-branch' }}
+          echo "Section 2" >> chapter2
+          git commit -am "Added 'Section 1' to chapter2"
 
-    # # We'll run Ubuntu for performance instead of Mac or Windows.
-    # runs-on: ubuntu-latest
+          echo "Section 2" >> chapter2
+          git commit -am "fix"
 
-    # steps:
-    #   # We'll need to check out the repository so that we can edit the README.
-    #   - name: Checkout
-    #     uses: actions/checkout@v4
-    #     with:
-    #       fetch-depth: 0 # Let's get all the branches.
-
-    #   # In README.md, switch step 1 for step 2.
-    #   - name: Update to step 2
-    #     uses: skills/action-update-step@v2
-    #     with:
-    #       token: ${{ secrets.GITHUB_TOKEN }}
-    #       from_step: 1
-    #       to_step: 2
-    #       branch_name: my-first-branch
-
-    #   # Add three commits to the my-first-branch branch.
-    #   - name: Add chapter2 commits
-    #     run: |
-    #       echo "Chatper 2" > chapter2
-    #       git add chapter2
-    #       git commit -m "Added chaptor2"
-
-    #       echo "Chapter 2" > chapter2
-    #       git commit -am "FIxed tyypo"
-
-    #       echo "Section 2" >> chapter2
-    #       git commit -am "Added 'Section 1' to chapter2"
-
-    #       echo "Section 2" >> chapter2
-    #       git commit -am "fix"
-
-    #       git push origin my-first-branch
+          git push origin my-first-branch
