--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -50,7 +50,7 @@ jobs:
   main:
     needs: check_condition
     runs-on: ubuntu-latest
-    if: success()
+    if: ${{ success() }}
     steps:
 
       # We'll need to check out the repository so that we can edit the README.
