--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -18,38 +18,36 @@ permissions:
   # Need `contents: write` to update the step metadata.
   contents: write
 
+
 jobs:
   # Get the current step to only run the main job when the learner is on the same step.
-  get_current_step:
-    name: Check current step number
+  check_conditions:
     runs-on: ubuntu-latest
+    if: github.event_name != 'workflow_dispatch'
     steps:
+      # Needed so we can read the step number from -step.txt
       - name: Checkout
         uses: actions/checkout@v4
+
       - id: get_step
-        run: |
-          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
-    outputs:
-      current_step: ${{ steps.get_step.outputs.current_step }}
+        run: echo "step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
 
-  on_open_a_pull_request:
-    name: On open a pull request
-    needs: get_current_step
+      - name: Check if correct step
+        if: ${{ steps.get_step.outputs.step != 3 }}
+        run: exit 1
 
-    # We will only run this action when:
-    # 1. This repository isn't the template repository.
-    # 2. The step is currently 3.
-    # 3. The head branch name is `my-first-branch`.
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
-    # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
-    if: >-
-      ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 3
-          && github.head_ref == 'my-first-branch' }}
+      - name: Check if template repository
+        if:  github.event.repository.is_template
+        run: exit 1
 
-    # We'll run Ubuntu for performance instead of Mac or Windows.
+      - name: Check if branch is my-first-branch
+        if: github.head_ref != 'my-first-branch'
+        run: exit 1
+
+  main:
+    needs: check_conditions
     runs-on: ubuntu-latest
-
+    if: github.event_name == 'workflow_dispatch' || success()
     steps:
       # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
