--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,23 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#f8faea",
-        "activityBar.background": "#f8faea",
+        "activityBar.activeBackground": "#28b3b6",
+        "activityBar.background": "#28b3b6",
         "activityBar.foreground": "#15202b",
         "activityBar.inactiveForeground": "#15202b99",
-        "activityBarBadge.background": "#31bace",
-        "activityBarBadge.foreground": "#15202b",
-        "commandCenter.border": "#15202b99",
-        "sash.hoverBorder": "#f8faea",
-        "statusBar.background": "#ebf1c0",
-        "statusBar.foreground": "#15202b",
-        "statusBarItem.hoverBackground": "#dee896",
-        "statusBarItem.remoteBackground": "#ebf1c0",
-        "statusBarItem.remoteForeground": "#15202b",
-        "titleBar.activeBackground": "#ebf1c0",
-        "titleBar.activeForeground": "#15202b",
-        "titleBar.inactiveBackground": "#ebf1c099",
-        "titleBar.inactiveForeground": "#15202b99"
+        "activityBarBadge.background": "#b728b4",
+        "activityBarBadge.foreground": "#e7e7e7",
+        "commandCenter.border": "#e7e7e799",
+        "sash.hoverBorder": "#28b3b6",
+        "statusBar.background": "#1f8a8c",
+        "statusBar.foreground": "#e7e7e7",
+        "statusBarItem.hoverBackground": "#28b3b6",
+        "statusBarItem.remoteBackground": "#1f8a8c",
+        "statusBarItem.remoteForeground": "#e7e7e7",
+        "titleBar.activeBackground": "#1f8a8c",
+        "titleBar.activeForeground": "#e7e7e7",
+        "titleBar.inactiveBackground": "#1f8a8c99",
+        "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#ebf1c0"
+    "peacock.color": "#ebf1c0",
+    "peacock.remoteColor": "#1f8a8c"
 }
