--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -28,6 +28,9 @@ jobs:
       - id: get_step
         run: echo "step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
 
+      - name: Debug
+        run: echo "${{ steps.get_step.outputs.step }}"
+
       - name: Check if correct step
         if: ${{ steps.get_step.outputs.step != 1 }}
         run: exit 1
