--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,9 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"mhutchie.git-graph"
+				"mhutchie.git-graph",
+				"bierner.markdown-preview-github-styles",
+				"shd101wyy.markdown-preview-enhanced"
 			]
 		}
 	},
