--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -57,7 +57,7 @@ jobs:
 
       # In README.md, switch step 1 for step 2.
       - name: Update to step 2
-        uses: action-update-step@v2
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 1
