--- a/.github/workflows/0-welcome.yml
+++ b/.github/workflows/0-welcome.yml
@@ -62,7 +62,7 @@ jobs:
 
       # In README.md, switch step 0 for step 1.
       - name: Update to step 1
-        uses: skills/action-update-step@v2
+        uses: ./.github/actions/action-update-step
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 0
