--- a/.github/workflows/4-step.yml
+++ b/.github/workflows/4-step.yml
@@ -56,7 +56,7 @@ jobs:
 
       # In README.md, switch step 4 for step X.
       - name: Update to step X
-        uses: skills/action-update-step@v2
+        uses: ./.github/actions/action-update-step
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 4
