--- a/.github/workflows/3-step.yml
+++ b/.github/workflows/3-step.yml
@@ -58,7 +58,7 @@ jobs:
 
       # In README.md, switch step 3 for step 4.
       - name: Update to step 4
-        uses: ./.github/actions/action-update-step
+        uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           from_step: 3
