--- a/.github/workflows/5-step-old.yml
+++ b/.github/workflows/5-step-old.yml
@@ -1,9 +1,15 @@
-name: Step 0
+name: Step 4, Merge your pull request
 
+# This step listens for the learner to merge a pull request with branch `my-first-branch`.
+# This workflow updates from step 4 to step X.
+
+# This will run every time we create push a commit to `main`.
+# Reference: https://docs.github.com/en/actions/learn-github-actions/events-that-trigger-workflows
 on:
   workflow_dispatch:
-  watch:
-    types: [started]
+  push:
+    branches:
+      - main
 
 # Reference: https://docs.github.com/en/actions/security-guides/automatic-token-authentication
 permissions:
@@ -12,53 +18,47 @@ permissions:
   contents: write
 
 jobs:
+  # Get the current step to only run the main job when the learner is on the same step.
   get_current_step:
-    name: Get current step number
+    name: Check current step number
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - id: get_step
         run: |
-          current_step=0
-
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "The workflow was triggered manually"
-            echo "CURRENT_STEP=$current_step" >> $GITHUB_OUTPUT
-          else
-            echo "The workflow was triggered by the repo getting 'starred'"
-            echo "CURRENT_STEP=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
-          fi
+          echo "current_step=$(cat ./.github/steps/-step.txt)" >> $GITHUB_OUTPUT
     outputs:
       current_step: ${{ steps.get_step.outputs.current_step }}
 
-  main:
+  on_merge_your_pull_request:
+    name: On merge your pull request
     needs: get_current_step
 
     # We will only run this action when:
     # 1. This repository isn't the template repository.
-    # 2. The step is currently 0.
+    # 2. The step is currently 4.
     # Reference: https://docs.github.com/en/actions/learn-github-actions/contexts
     # Reference: https://docs.github.com/en/actions/learn-github-actions/expressions
     if: >-
       ${{ !github.event.repository.is_template
-          && needs.get_current_step.outputs.current_step == 0 }}
+          && needs.get_current_step.outputs.current_step == 4 }}
 
     # We'll run Ubuntu for performance instead of Mac or Windows.
     runs-on: ubuntu-latest
 
     steps:
-      # We'll need to check out the repository so that we can edit README.md.
+      # We'll need to check out the repository so that we can edit the README.
       - name: Checkout
         uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Let's get all the branches.
 
-      # In README.md, switch step 0 for step 1.
-      - name: Update to step 1
+      # In README.md, switch step 4 for step X.
+      - name: Update to step X
         uses: skills/action-update-step@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          from_step: 0
-          to_step: 1
+          from_step: 4
+          to_step: X
+          branch_name: my-first-branch
