--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Debug
         run: echo "${{ steps.get_step.outputs.step }}"
 
+      - name: Debug
+        run: echo ${{ toJSON(github) }}
+
       - name: Check if correct step
         if: ${{ steps.get_step.outputs.step != 1 }}
         run: exit 1
