--- a/.github/workflows/1-step.yml
+++ b/.github/workflows/1-step.yml
@@ -27,7 +27,7 @@ jobs:
         run: echo "${{ steps.get_step.outputs.step }}"
 
       - name: Debug
-        run: echo ${{ toJSON(github) }}
+        run: echo "${{ toJSON(github) }}"
 
       - name: Check if correct step
         if: ${{ steps.get_step.outputs.step != 1 }}
